Css Added Colors and classes

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,12 @@
-
+body {
+    background-color: purple;
+}
+.mmmcake {background-color: sandybrown
+    ;}
+.First_Headline {
+    color: springgreen
+    ;}
+.Sub_Head {color: rgb(182, 207, 40)
+    ;}
+.Homer_Simpson_celebrating {color: 
+    rgb(0, 4, 255);}
